<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.github.lazyf1sh</groupId>
    <artifactId>sandbox-java-parent</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <!-- FIXME change it to the project's website -->
    <url>http://www.example.com</url>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
    <modules>
        <module>sandbox-java</module>
        <module>sandbox-javafx</module>
        <module>sandbox-java-applet</module>
        <module>sandbox-servlets</module>
        <module>sandbox-ehcache</module>
        <module>sandbox-quartz</module>
        <module>sandbox-spring-webmvc</module>
        <module>sandbox-spring-standalone</module>
        <module>sandbox-mockito</module>
        <module>sandbox-jxbrowser</module>
        <module>sandbox-pdfbox1</module>
        <module>sandbox-jackson</module>
        <module>sandbox-wicket</module>
        <module>sandbox-slf4j</module>
        <module>sandbox-selenium</module>
        <module>sandbox-jasper-embedded</module>
        <module>sandbox-hibernate5-standalone</module>
        <module>sandbox-hibernate5-spring5-integration</module>
        <module>sandbox-camel</module>
        <module>sandbox-jdbc</module>
        <module>sandbox-liquibase-maven</module>
        <module>sandbox-log4j</module>
        <module>sandbox-h2</module>
    </modules>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
